--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -14,7 +14,7 @@
         <h2 align="center" class="logo-container"><img src="assets/logo.png" alt="Logo Pamulang" class="logo">Formulir
             Pendaftaran UKM <br> Universitas Pamulang</h2>
 
-        <form action="proses_pendaftaran.html" method="post">
+        <form action="proses_pendaftaran.html">
             <div class="form-group">
                 <label for="nama">Nama:</label>
                 <input type="text" id="nama" name="nama" maxlength="50" required>
