--- a/proses_pendaftaran.html
+++ b/proses_pendaftaran.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Proses Pendaftaran UKM UNPAM</title>
-	<link rel="icon" type="image/png" href="assets/logo.ico">
-	<style type="text/css">
-		body {
-			margin-left: 0px;
-			margin-top: 0px;
-			margin-right: 0px;
-			margin-bottom: 0px;
-			background: #eff2fb;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proses Pendaftaran PKM UNPAM</title>
+    <link rel="icon" type="image/png" href="assets/logo.ico">
 </head>
-
-<body>
-
-	<img src="assets/under.png" width="100%" height />
-
+<body style="margin: 0; padding: 0;">
+    <img src="assets/under.png" alt="Under Construction Image" style="width: 100%;">
 </body>
-
 </html>
